5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1800_2569.log
== TEST (2019-06-12 22:39:20) 
-- CODE:
from numpy import*                      from numpy import*
                                         x= array(eval(input("digite o vetor de numero real: ")))
x = array(eval(input("Vetor: ")))         q=size(x)
n = size(x)                               m=sum(x)/q
m = sum(x)/n                              s=0
d = 0                                     for i in range(size(x)):
                                           d= d+((x[i]-m)**2)/(q-1)
for g in range(size(x)):                    d=d**(1/2)
	d = d+(x[g]-m)**2/(n-1)                   print(round(d,3))
d = d**(1/2)	
	
print(round(d, 3))
-- ERROR:
File "XXXX", line 1
    from numpy import*                      from numpy import*
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:40:56) 
-- CODE:
from numpy import*
x= array(eval(input("digite o vetor de numero real: ")))       
q=size(x)
m=sum(x)/q
s=0
for i in range(size(x)):
d= d+((x[i]-m)**2)/(q-1)
d=d**(1/2)
print(round(d,3))

-- ERROR:
File "XXXX", line 7
    d= d+((x[i]-m)**2)/(q-1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:41:10) 
-- CODE:
from numpy import*
x= array(eval(input("digite o vetor de numero real: ")))       
q=size(x)
m=sum(x)/q
s=0
for i in range(size(x)):
d= d+(x[i]-m)**2/(q-1)
d=d**(1/2)
print(round(d,3))

-- ERROR:
File "XXXX", line 7
    d= d+(x[i]-m)**2/(q-1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:41:48) 
-- CODE:
from numpy import*
x= array(eval(input("digite o vetor de numero real: ")))       
q=size(x)
m=sum(x)/q
d=0
for i in range(size(x)):
d= d+(x[i]-m)**2/(q-1)
d= d**(1/2)
print(round(d,3))

-- ERROR:
File "XXXX", line 7
    d= d+(x[i]-m)**2/(q-1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:42:57) 
-- CODE:
from numpy import*
x= array(eval(input("digite o vetor de numero real: ")))       
q = size(x)
m = sum(x)/q
d = 0
for g in range(size(x)):
	d = d+(x[g]-m)**2/(q-1)
d = d**(1/2)	
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:43:18) 
-- CODE:
from numpy import*
x= array(eval(input("digite o vetor de numero real: ")))       
q = size(x)
m = sum(x)/q
d = 0
for g in range(size(x)):
	d = d+(x[g]-m)**2/(q-1)
d = d**(1/2)	
print(round(d, 3))
-- EXECUTION TIME:
1.14281
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
